b=914016 always dispatch main thread updates after non-realtime graph finishes r=padenot

--HG--
extra : transplant_source : %0B%0C%93%05k%3F%3A%AEfT9%C9u%8D%C5pa%9F%11%0D